--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "timed-online": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,14 @@
     "ramda": "^0.24.1"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
     "standard": "^10.0.2"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it"
+    ]
   }
 }
